--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -1,4 +1,4 @@
-name: ETL
+name: ETL workflow for group 3
 
 on:
 #  schedule:
@@ -15,7 +15,7 @@ jobs:
       - name: Setup R environment
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.3.2'
+          r-version: '4.3.3'
       - name: Cache R packages
         uses: actions/cache@v2
         with:
@@ -26,4 +26,20 @@ jobs:
       - name: Install packages
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          Rscript -e 'install.packages(c("readr", "RSQLite"))'
+          Rscript -e 'install.packages(c("ggplot2", "dplyr", "readr", "RSQLite"))'
+      - name: Execute R script
+        run: |
+          Rscript R/load_data.R
+      - name: Add files
+        run: |
+          git config --global user.email ""
+          git config --global user.name ""
+          git add --all figures/
+      - name: Commit files
+        run: |
+          git commit -m ""
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            branch: main
