--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -27,17 +27,17 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           Rscript -e 'install.packages(c("ggplot2", "dplyr", "readr", "RSQLite"))'
-      - name: Execute R script
-        run: |
-          Rscript R/load_data.R
-      - name: Add files
-        run: |
-          git config --global user.email "5586227@live.warwick.ac.uk"
-          git config --global user.name "5586227"
-          git add --all figures/
-      - name: Commit files
-        run: |
-          git commit -m "commit files"
+     # - name: Execute R script
+     #   run: |
+     #     Rscript R/load_data.R
+     # - name: Add files
+     #   run: |
+     #     git config --global user.email "5586227@live.warwick.ac.uk"
+     #     git config --global user.name "5586227"
+     #     git add --all figures/
+     # - name: Commit files
+     #   run: |
+     #     git commit -m "commit files"
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
         with:
