--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -38,6 +38,9 @@ jobs:
         # Install packages if cache is not hit
         run: Rscript -e 'install.packages(c("DBI", "dplyr", "readr", "RSQLite", "plotly", "tidyr", "lubridate"))'
         # Run R script to install required R packages
+
+      - name: test
+        run: Rscript -e 'rmarkdown::render("test.Rmd")'
       
       - name: Create database schema
         run: Rscript -e 'rmarkdown::render("database_schema.Rmd")'
