--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -6,11 +6,15 @@ on:
 
 jobs:
   install-packages:
-    if: "!contains(github.event.head_commit.message, '[skip install]')"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Check for skip install flag
+        run: echo "${{ github.event.head_commit.message }}"
+        id: skip-install
+        continue-on-error: true
 
       - name: Setup R environment
         uses: r-lib/actions/setup-r@v2
@@ -18,6 +22,7 @@ jobs:
           r-version: '4.3.3'
 
       - name: Cache R packages
+        if: ${{ steps.skip-install.outputs.code == 0 && steps.cache.outputs.cache-hit != 'true' }}
         uses: actions/cache@v2
         with:
           path: ${{ env.R_LIBS_USER }}
@@ -25,8 +30,8 @@ jobs:
           restore-keys: ${{ runner.os }}-r-
 
       - name: Install packages
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: R -e 'install.packages(c("DBI", "dplyr", "readr", "RSQLite", "plotly", "tidyr", "lubridate"))'
+        if: ${{ steps.skip-install.outputs.code == 0 && steps.cache.outputs.cache-hit != 'true' }}
+        run: R -e 'install.packages(c("DBI", "dplyr", "readr", "RSQLite", "plotly", "tidyr", "lubridate"), dependencies=TRUE, repos="https://cloud.r-project.org")'
 
   run-tests-and-data-processing:
     needs: [install-packages]
