--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -28,8 +28,10 @@ jobs:
         with:
           path: ${{ env.R_LIBS_USER }}
           # Specify cache path as R package path from environment variable
-          key: ${{ runner.os }}-r-packages
-          restore-keys: ${{ runner.os }}-r-packages
+          key: ${{ runner.os }}-r-${{ hashFiles('**/lockfile') }}
+          # Use operating system and hash files as cache key
+          restore-keys: ${{ runner.os }}-r-
+          # Keys used when restoring cache
 
       - name: Install packages
         if: steps.cache.outputs.cache-hit != 'true'
@@ -39,18 +41,6 @@ jobs:
 
       - name: test
         run: Rscript test.R
-      
-      - name: Create database schema
-        run: Rscript database_schema.R
-        # Render database schema
-
-      - name: Validate and load data into database
-        run: Rscript data_validation_and_load.R
-        # Run R Markdown to render validation and load data into database
-
-      - name: data analysis
-        run: Rscript data_analysis.R
-        # Render data analysis
 
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
