--- a/.github/workflows/etl.yaml
+++ b/.github/workflows/etl.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Install packages
         if: steps.cache.outputs.cache-hit != 'true'
         # Install packages if cache is not hit
-        run: R -e 'install.packages(c("dplyr","ggplot2","gridExtra"))'
+        run: R -e 'install.packages(c("RSQLite","DBI","dplyr","ggplot2","gridExtra"))'
         # Install required R packages
       
       - name: Create database schema
